name:                kmn-programming
version:             0.9.0.1
synopsis:            K_M,N quadratic programming
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Péter Diviánszky
maintainer:          divipp@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
                     Makefile
                     SplitProblem.hs
cabal-version:       >=1.10

executable kmn-programming
  main-is:             Main.hs
  other-modules:       KMNProgramming
  other-extensions:
  build-depends:      base >=4.9 && <4.15
                    , x86-64bit >=0.4 && <0.5
                    , optparse-applicative >=0.13 && <0.16
                    , random
                    , random-shuffle
                    , time
  -- hs-source-dirs:      
  default-language:    Haskell2010
